# tonyMesh

./: CMakeLists.txt  README.md
include/: types.hpp
include/IO/: enums.hpp  meshLoader.hpp
include/glad/: glad.h
include/viewer/: viewer.hpp
src/: glad.c  main.cpp
src/IO/: meshLoader.cpp
src/viewer/: viewer.cpp
